[*] 用户租户信息，增加是否为主要租户字段