@@ -3,18 +3,20 @@ package com.ingot.cloud.pms.service.biz.impl;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.ingot.cloud.pms.api.model.domain.SysTenant;
 import com.ingot.cloud.pms.api.model.domain.SysUser;
+import com.ingot.cloud.pms.api.model.domain.SysUserTenant;
 import com.ingot.cloud.pms.service.biz.TenantDetailsService;
 import com.ingot.cloud.pms.service.domain.SysTenantService;
 import com.ingot.cloud.pms.service.domain.SysUserService;
+import com.ingot.cloud.pms.service.domain.SysUserTenantService;
 import com.ingot.framework.core.model.common.AllowTenantDTO;
 import com.ingot.framework.core.model.enums.CommonStatusEnum;
 import com.ingot.framework.security.core.tenantdetails.TenantDetailsResponse;
-import com.ingot.framework.tenant.TenantEnv;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -28,28 +30,34 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class TenantDetailsServiceImpl implements TenantDetailsService {
     private final SysTenantService sysTenantService;
+    private final SysUserTenantService sysUserTenantService;
     private final SysUserService sysUserService;
 
     @Override
     public TenantDetailsResponse getUserTenantDetails(String username) {
         TenantDetailsResponse response = new TenantDetailsResponse();
 
-        List<SysUser> userList = TenantEnv.globalApply(() -> sysUserService.list(Wrappers.<SysUser>lambdaQuery()
-                .eq(SysUser::getUsername, username)));
-        List<AllowTenantDTO> allows = sysTenantService.list(Wrappers.<SysTenant>lambdaQuery()
-                        .eq(SysTenant::getStatus, CommonStatusEnum.ENABLE)
-                        .in(SysTenant::getId,
-                                userList.stream()
-                                        .map(SysUser::getTenantId)
-                                        .collect(Collectors.toList())))
+        SysUser user = sysUserService.getOne(Wrappers.<SysUser>lambdaQuery().eq(SysUser::getUsername, username));
+        List<SysUserTenant> userTenantList = sysUserTenantService.list(
+                Wrappers.<SysUserTenant>lambdaQuery()
+                        .eq(SysUserTenant::getUserId, user.getId()));
+
+        List<AllowTenantDTO> allows = sysTenantService.list(
+                        Wrappers.<SysTenant>lambdaQuery()
+                                .in(SysTenant::getId, userTenantList.stream()
+                                        .map(SysUserTenant::getTenantId).collect(Collectors.toSet())))
                 .stream()
+                .filter(item -> item.getStatus() == CommonStatusEnum.ENABLE)
                 .map(item -> {
                     AllowTenantDTO dto = new AllowTenantDTO();
                     dto.setId(item.getId());
                     dto.setName(item.getName());
                     dto.setAvatar(item.getAvatar());
+                    dto.setMain(userTenantList.stream()
+                            .anyMatch(t -> Objects.equals(t.getTenantId(), item.getId()) && t.getMain()));
                     return dto;
-                }).collect(Collectors.toList());
+                })
+                .toList();
 
         response.setAllows(allows);
         return response;
